k8s-configs/crud-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-service
  template:
    metadata:
      labels:
        app: crud-service
    spec:
      containers:
      - name: crud-service
        image: go-microservice:crud-service
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  type: ClusterIP
  selector:
    app: crud-service
  ports:
  - port: 8081
    targetPort: 8081
