k8s-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - path: /api/auth(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-service
              port:
                number: 8080
        - path: /api/notes(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: crud-service
              port:
                number: 8081
